--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -12,4 +12,4 @@ build-std = ["core", "compiler_builtins"]
 build-std-features = ["compiler-builtins-mem"]
 
 [build]
-target = "x86_64-vamos.json"
+target = "x86_64-cosmos.json"
