--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,9 @@ panic = "abort"
 [dependencies]
 bootloader = "0.9.23"
 # bootloader = "0.10.13"
+volatile = "0.2.6"
+spin = "0.5.2"
+
+[dependencies.lazy_static]
+version = "1.0"
+features = ["spin_no_std"]
