feat: add irq disable & enabling asm & testing SGI (software generated interrupt)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+aarch64 = "0.0.11"
+acpi = "5.0.0"
+arm-gic = "0.1.0"
 log = "0.4.20"
 uefi = { version = "0.26.0", features = ["alloc"] }
 uefi-services = "0.23.0"
