feat: initialize timer & rescheduler irq refactor: seperate & comment out acpi loading

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,9 @@ edition = "2021"
 aarch64 = "0.0.11"
 acpi = "5.0.0"
 arm-gic = "0.1.0"
+generic_once_cell = "0.1.1"
+hermit-dtb = "0.1.1"
+lock_api = "0.4.11"
 log = "0.4.20"
 uefi = { version = "0.26.0", features = ["alloc"] }
 uefi-services = "0.23.0"
