--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,7 +1,9 @@
 [build]
-target = "aarch64-unknown-uefi"
+target = "aarch64-unknown-none"
+
+[target.'cfg(target_arch="aarch64")']
+rustflags = ["-Clink-arg=-Tsrc/arch/aarch64/link.ld"]
 
 [unstable]
 build-std = ["core", "alloc"]
 build-std-features = ["compiler-builtins-mem"]
-
