--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-aarch64 = "0.0.11"
 aarch64-cpu = "9.4.0"
 acpi = "5.0.0"
 arm-gic = "0.1.0"
@@ -16,6 +15,7 @@ hermit-dtb = "0.1.1"
 lock_api = "0.4.11"
 log = "0.4.20"
 plain = "0.2.3"
+tock-registers = "0.9.0"
 
 [dependencies.fdt-rs]
 version = "0.4"
