--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -2,7 +2,8 @@
 target = "aarch64-unknown-none-softfloat"
 
 [target.'cfg(target_arch="aarch64")']
-rustflags = ["-Clink-arg=-Tsrc/arch/aarch64/kernel.ld"]
+# rustflags = ["-Clink-arg=-Tsrc/arch/aarch64/kernel.ld"]
+rustflags = ["-Clink-arg=-Tsrc/bsp/virt/kernel.ld"]
 
 [unstable]
 build-std = ["core", "alloc"]
