--- a/qemu.dts
+++ b/qemu.dts
@@ -390,7 +390,7 @@
 
 	chosen {
 		stdout-path = "/pl011@9000000";
-		rng-seed = <0xaaf92099 0xad2167ac 0x5ca99306 0x5d756358 0x6e096d06 0x9ff13fb9 0xd1637e33 0x6920403d>;
-		kaslr-seed = <0x142a5956 0x45901d0d>;
+		rng-seed = <0xb855148e 0x977a3d64 0xf95b3cd7 0x62fb3c07 0x9433a19f 0x2d04788b 0xa8ea6a39 0x8f0c6965>;
+		kaslr-seed = <0x29776149 0x5ad8cd55>;
 	};
 };
