feat: mmu init & mmio mapping

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ qemu-virt=[]
 
 [dependencies]
 aarch64-cpu = { version = "9.x.x" }
+aarch64-paging = "0.8.0"
 acpi = "5.0.0"
 arm-gic = "0.1.0"
 generic_once_cell = "0.1.1"
@@ -19,6 +20,7 @@ hermit-dtb = "0.1.1"
 lock_api = "0.4.11"
 log = "0.4.20"
 plain = "0.2.3"
+qemu-exit = "3.0.2"
 spin = "0.9.8"
 sptr = "0.3.2"
 tock-registers = { version = "0.8.x", default-features = false, features = ["register_types"] }
