--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ aarch64-cpu = { version = "9.x.x" }
 aarch64-paging = "0.8.0"
 acpi = "5.0.0"
 arm-gic = "0.1.0"
+embedded-alloc = "0.6.0"
 generic_once_cell = "0.1.1"
 goblin = { version = "0.8", default-features = false, features = ["elf64"] }
 hermit-dtb = "0.1.1"
